--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
   <head>
-    <title>Massively by HTML5 UP</title>
+    <title>XIAO YAJING</title>
     <meta charset="utf-8" />
     <meta
       name="viewport"
@@ -22,13 +22,12 @@
     <div id="wrapper" class="fade-in">
       <!-- Intro -->
       <div id="intro">
-        <h1>XIAO YAJING</h1>
+        <h1>Hello! Welcome to my website</h1>
         <p>
-          A free, fully responsive HTML5 + CSS3 site template designed by
-          <a href="https://twitter.com/ajlkn">@ajlkn</a> for
-          <a href="https://html5up.net">HTML5 UP</a><br />
-          and released for free under the
-          <a href="https://html5up.net/license">Creative Commons license</a>.
+          I am a self-taught front-end developer. I focus on writing clean,
+          elegant, and efficient code. Over the past (3) years, I have primarily
+          worked for companies that specialize in enterprise web applications
+          and mobile applications development.
         </p>
         <ul class="actions">
           <li>
@@ -43,22 +42,26 @@
 
       <!-- Header -->
       <header id="header">
-        <a href="index.html" class="logo">Massively</a>
+        <div href="index.html" class="logo">About me</div>
       </header>
 
       <!-- Nav -->
       <nav id="nav">
         <ul class="links">
-          <li class="active"><a href="index.html">This is Massively</a></li>
+          <li class="active"><a href="index.html">My Story</a></li>
         </ul>
         <ul class="icons">
           <li>
-            <a href="#" class="icon brands fa-linkedin"
-              ><span class="label">Instagram</span></a
+            <a
+              href="https://www.linkedin.com/in/yajing-xiao-10b4511b0/"
+              class="icon brands fa-linkedin"
+              ><span class="label">LinkedIn</span></a
             >
           </li>
           <li>
-            <a href="#" class="icon brands fa-github"
+            <a
+              href="https://github.com/FREASHCODE-MASTER"
+              class="icon brands fa-github"
               ><span class="label">GitHub</span></a
             >
           </li>
@@ -71,23 +74,25 @@
         <article class="post featured">
           <header class="major">
             <h2>
-              <a href="#"
-                >this is a<br />
-                my portfolio</a
+              <span
+                >My name is<br />
+                XIAO YAJING</span
               >
             </h2>
             <p>
-              Aenean ornare velit lacus varius enim ullamcorper proin aliquam<br />
-              facilisis ante sed etiam magna interdum congue. Lorem ipsum
-              dolor<br />
-              amet nullam sed etiam veroeros.
+              I am a front-end developer with a passion for creating interactive
+              and responsive web applications. I have experience working with
+              JavaScript, React, Vue, Node.js, Express, TypeScript, HTML, CSS,
+              and Git. I am a quick learner and I am always looking to expand my
+              knowledge and skill set. I am a team player and I am excited to
+              work with others to create amazing applications.
             </p>
           </header>
           <a href="#" class="image main"
-            ><img src="images/pic01.jpg" alt=""
+            ><img src="images/aboutMe.jpg" alt=""
           /></a>
           <ul class="actions special">
-            <li><a href="#" class="button large">check it out</a></li>
+            <li><div class="button large">view my projects</div></li>
           </ul>
         </article>
 
@@ -96,109 +101,136 @@
           <article>
             <header>
               <h2>
-                <a href="#">Bitcoin Price Tracker</a>
+                <a>Bitcoin Price Tracker</a>
               </h2>
             </header>
-            <a href="#" class="image fit"
-              ><img src="images/pic03.jpg" alt=""
-            /></a>
+            <a class="image fit"><img src="images/pic01.png" alt="" /></a>
             <p>
-              Donec eget ex magna. Interdum et malesuada fames ac ante ipsum
-              primis in faucibus. Pellentesque venenatis dolor imperdiet dolor
-              mattis sagittis magna etiam.
+              This is a website used to monitor daily Bitcoin price changes on 4
+              different exchanges. Users can easily find the lowest price
+              Bitcoin.
             </p>
             <ul class="actions special">
-              <li><a href="#" class="button">view my code</a></li>
+              <li>
+                <a
+                  href="https://github.com/FREASHCODE-MASTER/Bitcoin-Price-Tracker.git"
+                  class="button"
+                  >view my code</a
+                >
+              </li>
             </ul>
           </article>
           <article>
             <header>
               <h2>
-                <a href="#">Bitcoin Price Tracker</a>
+                <a>Mac Music</a>
               </h2>
             </header>
-            <a href="#" class="image fit"
-              ><img src="images/pic03.jpg" alt=""
-            /></a>
+            <a class="image fit"><img src="images/pic02.png" alt="" /></a>
             <p>
-              Donec eget ex magna. Interdum et malesuada fames ac ante ipsum
-              primis in faucibus. Pellentesque venenatis dolor imperdiet dolor
-              mattis sagittis magna etiam.
+              This is a music app that contains a series of Chinese popular
+              songs, classified by singers and music styles. It has functions
+              such as playing songs, switching songs, and liking etc.
             </p>
             <ul class="actions special">
-              <li><a href="#" class="button">view my code</a></li>
+              <li>
+                <a
+                  href="https://github.com/FREASHCODE-MASTER/Mac-Music.git"
+                  class="button"
+                  >view my code</a
+                >
+              </li>
             </ul>
           </article>
           <article>
             <header>
               <h2>
-                <a href="#">Bitcoin Price Tracker</a>
+                <a>Food Ordering app</a>
               </h2>
             </header>
-            <a href="#" class="image fit"
-              ><img src="images/pic03.jpg" alt=""
-            /></a>
+            <a class="image fit"><img src="images/pic04.png" alt="" /></a>
             <p>
-              Donec eget ex magna. Interdum et malesuada fames ac ante ipsum
-              primis in faucibus. Pellentesque venenatis dolor imperdiet dolor
-              mattis sagittis magna etiam.
+              This is a multi-functional takeout app. Users can order food, book
+              hotels, take taxis, book air tickets on the app, and directly
+              contact merchants and delivery people which is very convenient.
             </p>
             <ul class="actions special">
-              <li><a href="#" class="button">view my code</a></li>
+              <li>
+                <a
+                  href="https://github.com/FREASHCODE-MASTER/FoodOrdering-App.git"
+                  class="button"
+                  >view my code</a
+                >
+              </li>
             </ul>
           </article>
           <article>
             <header>
               <h2>
-                <a href="#">Bitcoin Price Tracker</a>
+                <a>My Blog</a>
               </h2>
             </header>
-            <a href="#" class="image fit"
-              ><img src="images/pic03.jpg" alt=""
-            /></a>
+            <a class="image fit"><img src="images/pic03.png" alt="" /></a>
             <p>
-              Donec eget ex magna. Interdum et malesuada fames ac ante ipsum
-              primis in faucibus. Pellentesque venenatis dolor imperdiet dolor
-              mattis sagittis magna etiam.
+              This is a blog website used to share problems and solutions
+              encountered in learning programming, as well as articles related
+              to programming.
             </p>
             <ul class="actions special">
-              <li><a href="#" class="button">view my code</a></li>
+              <li>
+                <a
+                  href="https://github.com/FREASHCODE-MASTER/My-Blog.git"
+                  class="button"
+                  >view my code</a
+                >
+              </li>
+            </ul>
+          </article>
+
+          <article>
+            <header>
+              <h2>
+                <a>E-commerce Website</a>
+              </h2>
+            </header>
+            <a class="image fit"><img src="images/pic05.png" alt="" /></a>
+            <p>
+              This is a shopping website that specializes in selling electronic
+              products. Users can purchase computers, mobile phones and other
+              products on the website. It also has the functions of searching
+              for products and adding to shopping carts for payment.
+            </p>
+            <ul class="actions special">
+              <li>
+                <a
+                  href="https://github.com/FREASHCODE-MASTER/Ecommerce-Website.git"
+                  class="button"
+                  >view my code</a
+                >
+              </li>
             </ul>
           </article>
           <article>
             <header>
               <h2>
-                <a href="#">Bitcoin Price Tracker</a>
+                <a>E-commerce Admin</a>
               </h2>
             </header>
-            <a href="#" class="image fit"
-              ><img src="images/pic03.jpg" alt=""
-            /></a>
+            <a class="image fit"><img src="images/pic06.png" alt="" /></a>
             <p>
-              Donec eget ex magna. Interdum et malesuada fames ac ante ipsum
-              primis in faucibus. Pellentesque venenatis dolor imperdiet dolor
-              mattis sagittis magna etiam.
+              This is a back-end management system for a shopping website that
+              specializes in selling electronic products. It has the functions
+              of viewing products, orders, categories, management and other
+              pages. Listing, editing and deleting products.
             </p>
             <ul class="actions special">
-              <li><a href="#" class="button">view my code</a></li>
-            </ul>
-          </article>
-          <article>
-            <header>
-              <h2>
-                <a href="#">Bitcoin Price Tracker</a>
-              </h2>
-            </header>
-            <a href="#" class="image fit"
-              ><img src="images/pic03.jpg" alt=""
-            /></a>
-            <p>
-              Donec eget ex magna. Interdum et malesuada fames ac ante ipsum
-              primis in faucibus. Pellentesque venenatis dolor imperdiet dolor
-              mattis sagittis magna etiam.
-            </p>
-            <ul class="actions special">
-              <li><a href="#" class="button">view my code</a></li>
+              <li>
+                <a
+                  href="https://github.com/FREASHCODE-MASTER/Ecommerce-Admin.git"
+                  class="button"
+                  >view my code</a
+                >
+              </li>
             </ul>
           </article>
         </section>
@@ -210,41 +242,28 @@
       <!-- Footer -->
       <footer id="footer">
         <section class="split contact">
-          <section class="alt">
-            <h3>Address</h3>
-            <p>
-              1234 Somewhere Road #87257<br />
-              Nashville, TN 00000-0000
-            </p>
-          </section>
           <section>
             <h3>Phone</h3>
-            <p><a href="#">(000) 000-0000</a></p>
+            <p><a href="#">+86 157 5439 3610</a></p>
           </section>
           <section>
             <h3>Email</h3>
-            <p><a href="#">info@untitled.tld</a></p>
+            <p><a href="#">xyj810670787@gmail.com</a></p>
           </section>
           <section>
             <h3>Social</h3>
             <ul class="icons alt">
               <li>
-                <a href="#" class="icon brands alt fa-twitter"
-                  ><span class="label">Twitter</span></a
+                <a
+                  href="https://www.linkedin.com/in/yajing-xiao-10b4511b0/"
+                  class="icon brands alt fa-linkedin"
+                  ><span class="label">LinkedIn</span></a
                 >
               </li>
               <li>
-                <a href="#" class="icon brands alt fa-facebook-f"
-                  ><span class="label">Facebook</span></a
-                >
-              </li>
-              <li>
-                <a href="#" class="icon brands alt fa-instagram"
-                  ><span class="label">Instagram</span></a
-                >
-              </li>
-              <li>
-                <a href="#" class="icon brands alt fa-github"
+                <a
+                  href="https://github.com/FREASHCODE-MASTER"
+                  class="icon brands alt fa-github"
                   ><span class="label">GitHub</span></a
                 >
               </li>
